<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/px_512"
    android:layout_height="@dimen/px_300"
    android:background="@mipmap/bt_set_conn_dialog_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/dialoghint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/px_78"
        android:focusable="true"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:focusableInTouchMode="true"
        android:gravity="clip_horizontal"
        android:includeFontPadding="false"
        android:marqueeRepeatLimit="marquee_forever"
        android:text="@string/bt_set_connection_device_hint"
        android:textColor="@color/color_stytle_2"
        android:textSize="@dimen/bt_font_size_6"
        app:layout_constraintBottom_toTopOf="@+id/bt_cancel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:textColor="@color/bt_dialog_text_selector_style"
        android:background="@drawable/bt_set_name_dialog_button_image"
        android:layout_marginLeft="@dimen/px_22"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/bt_dialog_cancel_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/px_36"
        android:id="@+id/bt_cancel"
        android:layout_width="@dimen/px_224"
        android:layout_height="@dimen/px_64"  />
    <Button
        android:layout_marginLeft="@dimen/px_20"
        android:textColor="@color/bt_dialog_text_selector_style"
        android:background="@drawable/bt_set_name_dialog_button_image"
        app:layout_constraintLeft_toRightOf="@+id/bt_cancel"
        app:layout_constraintTop_toTopOf="@+id/bt_cancel"
        android:text="@string/bt_dialog_ok_button"
        android:id="@+id/bt_ok"
        android:layout_width="@dimen/px_224"
        android:layout_height="@dimen/px_64"   />

</android.support.constraint.ConstraintLayout>